objects/SurveyTaker__c.object
<CustomObject><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SurveyTakers</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Taken__c</fullName>
        <description>Whether the survey was taken or not</description>
        <label>Taken</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Survey Taken</label><nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Surveys Taken</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Survey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>